@@ -4,6 +4,7 @@ Changelog
 0.9.6 - Unreleased
 ------------------
 
+* Use a browser layer (suggested by optilude)
 * Add ids and CSS classes to the batch_macro sort links (aaronv)
 * Fix a bug with the "operator" field.  Thanks to Mauro!
 
